--- a/style.css
+++ b/style.css
@@ -35,6 +35,12 @@ div h1 {
     justify-content: center;
 }
 
+.playAgain:hover {
+    background-color: darkslategray;
+    color: aliceblue;
+    cursor: pointer;
+}
+
 .winningCombination {
     border: 4px solid darkgoldenrod !important;
 }
